-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.7, 6.2.2, 6.5.0
-
-
46dd6e62b4 (qt/qtbase/6.3) 46dd6e62b4 (qt/tqtc-qtbase/6.3) 0013e3eb49 (qt/tqtc-qtbase/5.15) 6ecce84d87 (qt/tqtc-qtbase/6.2), daa77824b (dev), 9448ea930 (tqtc/lts-6.2), 41a8f0e47 (6.5)
To reproduce, run attached application and print using Microsoft Print to PDF. This is actually not limited to Microsoft Print to PDF and happens if printed on paper with real printer also.
However, produced PDF should have one big red rectangle, but instead there are many small red rectangles.
There is also a message printed in the debug output:
Invalid parameter passed to C runtime function.
| For Gerrit Dashboard: QTBUG-99990 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 419930,2 | Fix printing of dpr>1 images on Windows | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 421337,2 | Fix printing of dpr>1 images on Windows | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 421338,2 | Fix printing of dpr>1 images on Windows | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 421343,2 | Fix printing of dpr>1 images on Windows | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 421344,3 | Fix printing of dpr>1 images on Windows | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 472812,2 | Refix printing of dpr>1 images on Windows | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 473653,2 | Refix printing of dpr>1 images on Windows | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 473658,2 | Refix printing of dpr>1 images on Windows | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |