Fix printing of dpr>1 images on Windows

The win32 printing paint engine copies tiles of the source image into
temporary target images for printing. It does that using QPainter
painting. If there is a difference in DPR between source and target,
the painting will be scaled, leading to distorted results.

Fixes: QTBUG-99990
Change-Id: Ie7368655ef3abeece49fb1a6421e2d6ea7ed5e95
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
(cherry picked from commit 9e453dacc3855bafd3d7b692d76699c3bf07b9c6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>