src/printsupport/platform/windows/qprintengine_win.cpp
@@ -599,6 +599,7 @@ void QWin32PrintEngine::drawPixmap(const QRectF &targetRect,
             QImage img(QSize(imgw, imgh), QImage::Format_RGB32);
             img.fill(Qt::white);
             QPainter painter(&img);
+            img.setDevicePixelRatio(pixmap.devicePixelRatio());
             painter.drawPixmap(0,0, pixmap, tileSize * x, tileSize * y, imgw, imgh);
             QPixmap p = QPixmap::fromImage(img);
 
